fix layout issues and background colors on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,13 +72,8 @@
   * {
     @apply border-border;
   }
-  body {
-    @apply bg-background text-foreground overflow-x-hidden;
-  }
-}
 
-html,
-body,
-:root {
-  height: 100%;
+  body {
+    @apply bg-primary-foreground text-foreground overflow-x-hidden;
+  }
 }
